=== Deluge 1.2.2 (In Development) ===
==== Core ====
	* Fix #1109 auto add halting when a torrent with invalid filename encoding 
	  is in the directory

==== GtkUI ====
	* Fix #1162 problem with the queued torrents dialog from not properly adding 
	  to the add torrent dialog if set to auto add
	* Fix #1172 notify startup complete when adding torrents externally
	
==== Console ====
	* Fix #1143 deluge-console crashes when tab-completing not-existent directory
	
=== Deluge 1.2.1 (20 Feb 2010) ===
==== Core ====
	* Make Deluge dependent upon libtorrent 0.14.9 or greater.  This is due to
	  an over-downloading bug in previous versions of libtorrent.
	  
==== GtkUI ====
	* Fix #1128 Show an error dialog when unable to start a 'deluged' process
	* Increased max enterable download / upload limit to 60000 KiB/s

==== Console ====
	* Fix hanging when using commands from the command-line

==== Web ====
	* Fix #1147: Cannot upload a torrent in a multi-user system via the web interface
	* Fix #1148: Unable to save execute command in execute plugin

=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Fix file renaming
	* Fix tracker host filtering (Closes #1106)
	* Fix exceptions when gettext/locale cannot be initialized properly
	* Change share ratio calculation to use the total done instead of the all time
	  downloaded value.  This change will make the share ratio calculation not
	  use data downloaded in failed hash checks.
	* Fix torrent info name not being utf-8 decoded when root file/folder name
	  is blank

==== GtkUI ====
	* Fix #1104, #735 use path.utf-8 if available
	* Fix #1114 test active port not working in classic mode

==== Console ====
	* Fix #1115 not showing usage for the 'debug' command
	* Fix #1116 not being able to use command aliases when not connected to a daemon
	* Fix #1117 can't use the '3' key

==== Windows ====
	* Fix displaying folders in the add torrent dialog
	* Fix displaying the new release dialog
